fix jquery from subpath fix

--- a/js/tag-creator.html
+++ b/js/tag-creator.html
@@ -1,4 +1,4 @@
-<script type='text/javascript' src='/wp-admin/load-scripts.php?c=0&load[]=jquery-core,jquery-migrate,utils,plupload&ver=4.3.1'></script>    
+<script type='text/javascript' src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
     <script>
 
     var args = top.tinymce.activeEditor.windowManager.getParams();
